--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Chicken Delivery Payment</title>
 </head>
 <body>
-
-  <h1>Mondal Brothers</h1>
-  <a href="upi://pay?pn=Prasun%20Mondal&pa=prsnmondal@ybl&cu=INR">Pay Online</a>
-
+<h1>Chicken Delivery Service</h1>
+<p>Welcome to our chicken delivering business. Please proceed with the payment to place your order.</p>
+<!-- Replace the PayPal button code with your own payment button code -->
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="YOUR_PAYPAL_BUTTON_ID_HERE">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 </body>
 </html>
