--- a/index.html
+++ b/index.html
@@ -5,16 +5,44 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chicken Delivery Payment</title>
+<style>
+  body {
+    background-image: url('background.jpg'); /* Replace 'background.jpg' with the path to your background image */
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  .container {
+    max-width: 800px;
+    margin: 100px auto;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  .logo {
+    max-width: 100px;
+    margin-bottom: 20px;
+  }
+  .upi-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #f1c40f;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+</style>
 </head>
 <body>
-<h1>Chicken Delivery Service</h1>
-<p>Welcome to our chicken delivering business. Please proceed with the payment to place your order.</p>
-<!-- Replace the PayPal button code with your own payment button code -->
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="YOUR_PAYPAL_BUTTON_ID_HERE">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+<div class="container">
+<h1>Mondal Brothers.</h1>
+<p>Please proceed with the online payment portal</p>
+<a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay with UPI</a>
 </form>
+</div>
 </body>
 </html>
