--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chicken Delivery Payment</title>
+<title>Mondal Brothers</title>
 <style>
   body {
     background-image: url('background.jpg'); /* Replace 'background.jpg' with the path to your background image */
@@ -35,14 +35,34 @@
     border-radius: 5px;
     margin-top: 20px;
   }
+  .card {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .card h2 {
+    margin-top: 0;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+  }
 </style>
 </head>
 <body>
 <div class="container">
 <h1>Mondal Brothers.</h1>
-<p>Please proceed with the online payment portal</p>
-<a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay with UPI</a>
+<p>Live stock chicken distributor</p>
 </form>
+
+<div class="card" style="line-height:.5em">
+      <h3>Pranab Mondal</h3>
+      <p>Contact: +91-9734075801</p>
+      <p>Email: mondalbrothers@gmail.com</p>
+      <p>Website: https://prasunmondal.github.io/mondalbrothers</p>
+      <p>Address: Mirga, Mirga-Chatra, Goghat, West Bengal. 712602</p>
+    </div>
+    <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay with UPI</a>
+    <p style="color:Gray; line-height:.1em">Paying to Prasun Mondal (prsnmondal@ybl)</p>
 </div>
 </body>
 </html>
