--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 <p>Live stock chicken distributor</p>
 </form>
 
-<div class="card" style="line-height:.5em">
+<div class="card" style="line-height:1em;">
       <h3>Pranab Mondal</h3>
       <p>Contact: +91-9734075801</p>
       <p>Email: mondalbrothers@gmail.com</p>
-      <p>Website: https://prasunmondal.github.io/mondalbrothers</p>
+      <p>Website: http://tinyurl.com/mondalbros</p>
       <p>Address: Mirga, Mirga-Chatra, Goghat, West Bengal. 712602</p>
     </div>
     <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay with UPI</a>
