--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="card" style="line-height:1em;">
       <h3>Pranab Mondal</h3>
       <p>Contact: +91-9734075801</p>
-      <p>Email: mondalbrothers@gmail.com</p>
+      <p>Email: mbros.business@gmail.com</p>
       <p>Website: http://tinyurl.com/mondalbros</p>
       <p>Address: Mirga, Mirga-Chatra, Goghat, West Bengal. 712602</p>
     </div>
