--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p>Contact: +91-9734075801</p>
       <p>Email: mbros.business@gmail.com</p>
       <p>Website: http://tinyurl.com/mondalbros</p>
-      <p>Address: Mirga, Mirga-Chatra, Goghat, West Bengal. 712602</p>
+      <p line-height:1.2em>Address: Mirga-Chatra, Goghat, West Bengal. 712602</p>
     </div>
     <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay with UPI</a>
     <p style="color:Gray; line-height:.1em">Paying to Prasun Mondal (prsnmondal@ybl)</p>
