--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 <div class="container">
 <h1>Mondal Brothers.</h1>
-<p>Live stock chicken distributor</p>
+<p>Live Stock Chicken Distributor</p>
 </form>
 
 <div class="card" style="line-height:1em;">
