--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   }
   .container {
     max-width: 800px;
-    margin: 100px auto;
+    margin: 20px auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -30,7 +30,7 @@
     display: inline-block;
     padding: 10px 20px;
     background-color: #f1c40f;
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     border-radius: 5px;
     margin-top: 20px;
@@ -59,9 +59,11 @@
       <p>Contact: +91-9734075801</p>
       <p>Email: mbros.business@gmail.com</p>
       <p>Website: http://tinyurl.com/mondalbros</p>
-      <p line-height:1.2em>Address: Mirga-Chatra, Goghat, West Bengal. 712602</p>
+      <p style="line-height:1.2em">
+      	<a>Address:</a>
+      	<a>Mirga-Chatra, Goghat, West Bengal. 712602</a></p>
     </div>
-    <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay with UPI</a>
+    <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay Online / অনলাইন পেমেন্ট করুন</a>
     <p style="color:Gray; line-height:.1em">Paying to Prasun Mondal (prsnmondal@ybl)</p>
 </div>
 </body>
