--- a/index.html
+++ b/index.html
@@ -56,15 +56,14 @@
 
 <div class="card" style="line-height:1em;">
       <h3>Pranab Mondal</h3>
-      <p>Contact: +91-9734075801</p>
-      <p>Email: mbros.business@gmail.com</p>
-      <p>Website: http://tinyurl.com/mondalbros</p>
+      <p><a style="color:Gray;">Contact: </a><a style="color:Gray;" href="callto:9734075801">9734075801</a></p>
+      <p><a style="color:Gray;">Email: </a> mbros.business@gmail.com</p>
+      <p><a style="color:Gray;">Website: </a>http://tinyurl.com/mondalbros</p>
       <p style="line-height:1.2em">
-      	<a>Address:</a>
-      	<a>Mirga-Chatra, Goghat, West Bengal. 712602</a></p>
+      	<a style="color:Gray;">Address:</a><a style="color:Black;"><br>Mirga-Chatra, <br>Goghat,<br>West Bengal - 712602.</a></p>
     </div>
     <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay Online / অনলাইন পেমেন্ট করুন</a>
-    <p style="color:Gray; line-height:.1em">Paying to Prasun Mondal (prsnmondal@ybl)</p>
+    <p style="color:Gray; line-height:.1em"><font size="-1">Paying to Prasun Mondal (prsnmondal@ybl)</font></p>
 </div>
 </body>
 </html>
