--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       	<a style="color:Gray;">Address:</a><a style="color:Black;"><br>         Mirga-Chatra, <br>Goghat,<br>         West Bengal - 712602.</a></p>
     </div>
     <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay Online / অনলাইন পেমেন্ট করুন</a>
-    <p style="color:Gray; line-height:.1em">
+    <p style="color:Gray; line-height:1em">
       <font size="-1">Paying to Prasun Mondal</font>
       <br><font size="-1">Phone No: 9679004046</font>
       <br><font size="-1">UPI ID: prsnmondal@ybl</font>
