--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <div class="card" style="line-height:1em;">
       <h3>Pranab Mondal</h3>
-      <p><a style="color:Gray;">Contact: </a><a style="color:Gray;" href="callto:9734075801">9734075801</a></p>
+      <p><a style="color:Gray;">Contact: </a><a style="color:Gray;" href="tel:+919734075801">9734075801</a></p>
       <p><a style="color:Gray;">Email:   </a> mbros.business@gmail.com</p>
       <p><a style="color:Gray;">Website: </a>http://tinyurl.com/mondalbros</p>
       <p style="line-height:1.2em">
