--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p style="line-height:1.2em">
       	<a style="color:Gray;">Address:</a><a style="color:Black;"><br>         Mirga-Chatra, <br>Goghat,<br>         West Bengal - 712602.</a></p>
     </div>
-    <a href="upi://pay?pa=prsnmondal@ybl&pn=Prasun%20Mondal&tn=Payment%20to%20Mondal Brothers" class="upi-button">Pay Online / অনলাইন পেমেন্ট করুন</a>
+    <a href="upi://pay?pa=9679004046@okbizaxis&pn=Mondal%20Brothers" class="upi-button">Pay Online / অনলাইন পেমেন্ট করুন</a>
     <p style="color:Gray; line-height:1em">
       <font size="-1">Paying to Prasun Mondal</font>
       <br><font size="-1">Phone No: 9679004046</font>
