--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 </form>
 
 <div class="card" style="line-height:1em;">
+      <img src="gpay_business.png" alt="QR Code for Mondal Brothers">
       <h3>Pranab Mondal</h3>
       <p><a style="color:Gray;">Contact: </a><a style="color:Gray;" href="tel:+919734075801">9734075801</a></p>
       <p><a style="color:Gray;">Email:   </a> mbros.business@gmail.com</p>
