--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 </form>
 
 <div class="card" style="line-height:1em;">
-      <img src="gpay_business.jpeg" alt="QR Code for Mondal Brothers">
+      <img src="gpay_business.jpeg" alt="QR Code for Mondal Brothers" width="100%"
+           height="100%" >
       <h3>Pranab Mondal</h3>
       <p><a style="color:Gray;">Contact: </a><a style="color:Gray;" href="tel:+919734075801">9734075801</a></p>
       <p><a style="color:Gray;">Email:   </a> mbros.business@gmail.com</p>
