--- a/calculator.html
+++ b/calculator.html
@@ -61,10 +61,10 @@
         <input type="number" id="payingAmount" placeholder="Enter paying amount">
 
         <label for="totalDiscount">Total Discount %:</label>
-        <input type="number" id="totalDiscount" value="10" placeholder="Enter total discount %">
+        <input type="number" id="totalDiscount" value="5" placeholder="Enter total discount %">
 
         <label for="discountPassedOn">Discount Passed On %:</label>
-        <input type="number" id="discountPassedOn" placeholder="Enter discount passed on %">
+        <input type="number" id="discountPassedOn" value="2" placeholder="Enter discount passed on %">
 
         <label for="commission">Commission %:</label>
         <input type="number" id="commission" placeholder="Calculated automatically" readonly>
