--- a/calculator.html
+++ b/calculator.html
@@ -33,20 +33,6 @@
             width: 100%;
             box-sizing: border-box;
         }
-        .calculator button {
-            margin-top: 10px;
-            padding: 10px 20px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 5px;
-            background-color: #007bff;
-            color: white;
-            cursor: pointer;
-            width: 100%;
-        }
-        .calculator button:hover {
-            background-color: #0056b3;
-        }
         .result {
             margin-top: 20px;
             font-size: 1.2em;
@@ -58,18 +44,16 @@
     <div class="calculator">
         <h2>Discount & Commission Calculator</h2>
         <label for="payingAmount">Paying Amount:</label>
-        <input type="number" id="payingAmount" placeholder="Enter paying amount">
+        <input type="number" id="payingAmount" placeholder="Enter paying amount" oninput="calculateValues()">
 
         <label for="totalDiscount">Total Discount %:</label>
-        <input type="number" id="totalDiscount" value="5" placeholder="Enter total discount %">
+        <input type="number" id="totalDiscount" value="10" placeholder="Enter total discount %" oninput="calculateValues()">
 
         <label for="discountPassedOn">Discount Passed On %:</label>
-        <input type="number" id="discountPassedOn" value="3" placeholder="Enter discount passed on %">
+        <input type="number" id="discountPassedOn" placeholder="Enter discount passed on %" oninput="calculateValues()">
 
         <label for="commission">Commission %:</label>
         <input type="number" id="commission" placeholder="Calculated automatically" readonly>
-
-        <button onclick="calculateValues()">Calculate</button>
 
         <div class="result" id="result"></div>
     </div>
