--- a/calculator.html
+++ b/calculator.html
@@ -47,10 +47,10 @@
         <input type="number" id="payingAmount" placeholder="Enter paying amount" oninput="calculateValues()">
 
         <label for="totalDiscount">Total Discount %:</label>
-        <input type="number" id="totalDiscount" value="10" placeholder="Enter total discount %" oninput="calculateValues()">
+        <input type="number" id="totalDiscount" value="5" placeholder="Enter total discount %" oninput="calculateValues()">
 
         <label for="discountPassedOn">Discount Passed On %:</label>
-        <input type="number" id="discountPassedOn" placeholder="Enter discount passed on %" oninput="calculateValues()">
+        <input type="number" id="discountPassedOn" value="3" placeholder="Enter discount passed on %" oninput="calculateValues()">
 
         <label for="commission">Commission %:</label>
         <input type="number" id="commission" placeholder="Calculated automatically" readonly>
