--- a/calculator.html
+++ b/calculator.html
@@ -37,6 +37,8 @@
             margin-top: 20px;
             font-size: 1.2em;
             color: #333;
+            width: 100%;
+            overflow-x: auto;
         }
         table {
             width: 100%;
