--- a/calculator.html
+++ b/calculator.html
@@ -102,21 +102,21 @@
                     </tr>
                     <tr>
                         <td>Total Discount:</td>
-                        <td>₹${totalDiscountValue.toFixed(2)}</td>
+                        <td>₹${totalDiscountValue}</td>
                         <td>Total Amount:</td>
-                        <td>₹${payingAmount.toFixed(2)}</td>
+                        <td>₹${payingAmount}</td>
                     </tr>
                     <tr>
                         <td>Discount Passed On:</td>
-                        <td>₹${discountPassedOnValue.toFixed(2)}</td>
+                        <td>₹${discountPassedOnValue}</td>
                         <td>Discount Passed On:</td>
-                        <td>₹${discountPassedOnValue.toFixed(2)}</td>
+                        <td>₹${discountPassedOnValue}</td>
                     </tr>
                     <tr>
                         <td>Commission:</td>
-                        <td>₹${commissionValue.toFixed(2)}</td>
+                        <td>₹${commissionValue}</td>
                         <td>Payable Amount by Customer:</td>
-                        <td>₹${payableAmount.toFixed(2)}</td>
+                        <td>₹${payableAmount}</td>
                     </tr>
                 </table>
             `;
