--- a/calculator.html
+++ b/calculator.html
@@ -14,21 +14,22 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-color: #f4f4f9;
+            background-color: #f0f8ff;
         }
         .calculator {
             padding: 20px;
-            background: #fff;
+            background: #ffffff;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 600px;
             box-sizing: border-box;
+            border-radius: 10px;
         }
         .calculator input[type="number"] {
-            margin: 5px 0;
+            margin: 10px 0;
             padding: 10px;
             font-size: 1em;
-            border: 1px solid #ccc;
+            border: 2px solid #007bff;
             border-radius: 5px;
             width: 100%;
             box-sizing: border-box;
@@ -46,14 +47,18 @@
             margin-top: 10px;
         }
         table, th, td {
-            border: 1px solid #ccc;
+            border: 1px solid #007bff;
         }
         th, td {
-            padding: 8px;
+            padding: 10px;
             text-align: left;
         }
         th {
-            background-color: #f0f0f0;
+            background-color: #007bff;
+            color: white;
+        }
+        td {
+            background-color: #e6f7ff;
         }
     </style>
 </head>
