--- a/meter_readings.html
+++ b/meter_readings.html
@@ -51,26 +51,26 @@
                 <th>Difference</th>
             </tr>
             <tr>
-                <td>John Doe</td>
-                <td><input type="number" id="initial1" /></td>
+                <td>Pranab Mondal</td>
+                <td><input type="number" id="initial1" value="120" /></td>
                 <td><input type="number" id="current1" /></td>
                 <td id="difference1"></td>
             </tr>
             <tr>
-                <td>Jane Smith</td>
-                <td><input type="number" id="initial2" /></td>
+                <td>Prabir Mondal</td>
+                <td><input type="number" id="initial2" value="45" /></td>
                 <td><input type="number" id="current2" /></td>
                 <td id="difference2"></td>
             </tr>
             <tr>
-                <td>Bob Johnson</td>
-                <td><input type="number" id="initial3" /></td>
+                <td>Ramkinkar Mondal</td>
+                <td><input type="number" id="initial3" value="345" /></td>
                 <td><input type="number" id="current3" /></td>
                 <td id="difference3"></td>
             </tr>
             <tr>
-                <td>Alice Brown</td>
-                <td><input type="number" id="initial4" /></td>
+                <td>Dokan</td>
+                <td><input type="number" id="initial4" value="453" /></td>
                 <td><input type="number" id="current4" /></td>
                 <td id="difference4"></td>
             </tr>
