--- a/meter_readings.html
+++ b/meter_readings.html
@@ -49,30 +49,40 @@
                 <th>Initial Reading</th>
                 <th>Current Reading</th>
                 <th>Difference</th>
+                <th>Target Difference</th>
+                <th>Units Required</th>
             </tr>
             <tr>
                 <td>Pranab Mondal</td>
                 <td><input type="number" id="initial1" value="1083" /></td>
                 <td><input type="number" id="current1" /></td>
                 <td id="difference1"></td>
+                <td><input type="number" id="target1" /></td>
+                <td id="units1"></td>
             </tr>
             <tr>
                 <td>Prabir Mondal</td>
                 <td><input type="number" id="initial2" value="12278" /></td>
                 <td><input type="number" id="current2" /></td>
                 <td id="difference2"></td>
+                <td><input type="number" id="target2" /></td>
+                <td id="units2"></td>
             </tr>
             <tr>
                 <td>Ramkinkar Mondal</td>
                 <td><input type="number" id="initial3" value="6107" /></td>
                 <td><input type="number" id="current3" /></td>
                 <td id="difference3"></td>
+                <td><input type="number" id="target3" /></td>
+                <td id="units3"></td>
             </tr>
             <tr>
                 <td>Dokan</td>
                 <td><input type="number" id="initial4" value="3443" /></td>
                 <td><input type="number" id="current4" /></td>
                 <td id="difference4"></td>
+                <td><input type="number" id="target4" /></td>
+                <td id="units4"></td>
             </tr>
         </table>
         <br>
@@ -83,19 +93,27 @@
         function calculateDifferences() {
             let initial1 = document.getElementById('initial1').value;
             let current1 = document.getElementById('current1').value;
+            let target1 = document.getElementById('target1').value;
             document.getElementById('difference1').innerText = current1 - initial1;
+            document.getElementById('units1').innerText = target1 - (current1 - initial1);
 
             let initial2 = document.getElementById('initial2').value;
             let current2 = document.getElementById('current2').value;
+            let target2 = document.getElementById('target2').value;
             document.getElementById('difference2').innerText = current2 - initial2;
+            document.getElementById('units2').innerText = target2 - (current2 - initial2);
 
             let initial3 = document.getElementById('initial3').value;
             let current3 = document.getElementById('current3').value;
+            let target3 = document.getElementById('target3').value;
             document.getElementById('difference3').innerText = current3 - initial3;
+            document.getElementById('units3').innerText = target3 - (current3 - initial3);
 
             let initial4 = document.getElementById('initial4').value;
             let current4 = document.getElementById('current4').value;
+            let target4 = document.getElementById('target4').value;
             document.getElementById('difference4').innerText = current4 - initial4;
+            document.getElementById('units4').innerText = target4 - (current4 - initial4);
         }
     </script>
 
