--- a/meter_readings.html
+++ b/meter_readings.html
@@ -57,7 +57,7 @@
                 <td><input type="number" id="initial1" value="1083" /></td>
                 <td><input type="number" id="current1" /></td>
                 <td id="difference1"></td>
-                <td><input type="number" id="target1" /></td>
+                <td><input type="number" id="target1" value="95" /></td>
                 <td id="units1"></td>
             </tr>
             <tr>
@@ -65,7 +65,7 @@
                 <td><input type="number" id="initial2" value="12278" /></td>
                 <td><input type="number" id="current2" /></td>
                 <td id="difference2"></td>
-                <td><input type="number" id="target2" /></td>
+                <td><input type="number" id="target2" value="118" /></td>
                 <td id="units2"></td>
             </tr>
             <tr>
@@ -73,7 +73,7 @@
                 <td><input type="number" id="initial3" value="6107" /></td>
                 <td><input type="number" id="current3" /></td>
                 <td id="difference3"></td>
-                <td><input type="number" id="target3" /></td>
+                <td><input type="number" id="target3" value="15" /></td>
                 <td id="units3"></td>
             </tr>
             <tr>
@@ -81,7 +81,7 @@
                 <td><input type="number" id="initial4" value="3443" /></td>
                 <td><input type="number" id="current4" /></td>
                 <td id="difference4"></td>
-                <td><input type="number" id="target4" /></td>
+                <td><input type="number" id="target4" value="80" /></td>
                 <td id="units4"></td>
             </tr>
         </table>
